--- a/views/preflight.pug
+++ b/views/preflight.pug
@@ -37,12 +37,12 @@ html
                             .d-flex.w-100.justify-content-between
                                 h5.mb-1.details-of-start-point
                                 small Startpoint
-                            p.mb-1.coordinates-of-start-point
+                            p.mb-1#coordinates-of-start-point
                         a.list-group-item.list-group-item-action.flex-column.end-point
                             .d-flex.w-100.justify-content-between
                                 h5.mb-1.details-of-end-point
                                 small Endpoint
-                            p.mb-1.coordinates-of-end-point
+                            p.mb-1#coordinates-of-end-point
                     .launchbutton
                         #launch.button.btn.btn-outline-primary(type='button') Launch Flight Mode
                     .testbutton
